# cc-sessions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.github/workflows/: release.yml
docs/plans/: 2026-02-04-forked-sessions.md  2026-02-25-architecture-refactor-tdd.md
src/: claude_code.rs  interactive_state.rs  main.rs  message_classification.rs  remote.rs  session.rs
