[package]
name = "cc-sessions"
version = "1.3.2"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
skim = "0.10"
shellexpand = "3"

[profile.release]
lto = true
strip = true
